# pretty-cypher

./: ChangeLog.md  LICENSE  README.md  cabal.project  cypher-formatter.cabal  hie.yaml  package.yaml  pretty-cypher.cabal  stack.yaml
.github/workflows/: build.yml
app/: Main.hs
src/: Parser.hs  ParserCore.hs  QuasiQuote.hs  Types.hs
src/Cypher/: QuasiQuote.hs  Types.hs
src/Cypher/Parser/: Core.hs  Create.hs  Delete.hs  Match.hs  Pattern.hs  Query.hs  Return.hs  With.hs
src/Parser/: Core.hs  Match.hs  ParserCore.hs  Query.hs  Return.hs
test/: ParserSpec.hs  QuasiQuoteSpec.hs  Spec.hs
test/Cypher/: QuasiQuoteSpec.hs
test/Cypher/Parser/: CreateSpec.hs  DeleteSpec.hs  MatchSpec.hs  PatternSpec.hs  QuerySpec.hs  ReturnSpec.hs  WithSpec.hs
test/Parser/: MatchSpec.hs  QuerySpec.hs  ReturnSpec.hs
