cabal-version:      3.4
name:               pretty-cypher
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ed Allonby
maintainer:         edward.allonby@gmail.com
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-home-modules
        -Wpartial-fields
        -Wredundant-constraints

library
    import:           warnings
    exposed-modules:
        Cypher.Parser.Core
        Cypher.Parser.Create
        Cypher.Parser.Delete
        Cypher.Parser.Match
        Cypher.Parser.Pattern
        Cypher.Parser.Query
        Cypher.Parser.Return
        Cypher.Parser.With
        Cypher.QuasiQuote
        Cypher.Types
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0
      , containers
      , hspec
      , hspec-megaparsec
      , megaparsec
      , parser-combinators
      , raw-strings-qq
      , template-haskell
      , text

    hs-source-dirs:   src
    default-extensions:
        GHC2021
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
        QuasiQuotes
    default-language: GHC2021

executable pretty-cypher
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0
      , pretty-cypher
      , containers
      , hspec
      , hspec-megaparsec
      , megaparsec
      , parser-combinators
      , raw-strings-qq
      , template-haskell
      , text
    hs-source-dirs:   app
    default-extensions:
        GHC2021
        OverloadedStrings
        RecordWildCards
        TemplateHaskell
        QuasiQuotes
    default-language: GHC2021

test-suite pretty-cypher-test
    import:           warnings
    default-language: GHC2021
    other-modules:
        Cypher.Parser.CreateSpec
        Cypher.Parser.DeleteSpec
        Cypher.Parser.MatchSpec
        Cypher.Parser.PatternSpec
        Cypher.Parser.QuerySpec
        Cypher.Parser.ReturnSpec
        Cypher.Parser.WithSpec
        Cypher.QuasiQuoteSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    default-extensions:
      GHC2021
      OverloadedStrings
      RecordWildCards
      TemplateHaskell
      QuasiQuotes
    main-is: Spec.hs
    build-depends:
        base ^>=4.16.3.0
      , pretty-cypher
      , containers
      , hspec
      , hspec-megaparsec
      , megaparsec
      , parser-combinators
      , raw-strings-qq
      , template-haskell
      , text